--- a/package.json
+++ b/package.json
@@ -10,8 +10,13 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.5.9",
     "@astrojs/check": "^0.5.10",
-    "typescript": "^5.4.3"
+    "@astrojs/tailwind": "^5.1.0",
+    "@fontsource-variable/inter": "^5.0.17",
+    "astro": "^4.6.1",
+    "flowbite": "^2.3.0",
+    "preline": "^2.1.0",
+    "tailwindcss": "^3.4.3",
+    "typescript": "^5.4.5"
   }
 }
