--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.5.10",
+    "@astrojs/netlify": "^5.2.0",
     "@astrojs/tailwind": "^5.1.0",
+    "@astrojs/vercel": "^7.5.3",
     "@fontsource-variable/inter": "^5.0.17",
     "astro": "^4.6.3",
     "flowbite": "^2.3.0",
