--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,4 @@
-<<<<<<< HEAD
 
-=======
->>>>>>> 32fdfa66ffbdfc7eca1ac646587679da7985f2b7
 # generated types
 .astro/
 
@@ -20,3 +17,5 @@ pnpm-debug.log*
 
 # macOS-specific files
 .DS_Store
+
+dist/
